# bidsio

./: .gitignore  FILTERING_IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
scripts/: generate_ui.py  test_settings.py
src/bidsio/: __init__.py
src/bidsio/cli/: __init__.py  main.py
src/bidsio/config/: __init__.py  settings.py
src/bidsio/core/: __init__.py  entity_config.py  export.py  filters.py  models.py  repository.py
src/bidsio/infrastructure/: __init__.py  bids_loader.py  logging_config.py  paths.py  tsv_loader.py
src/bidsio/ui/: __init__.py  about_dialog.py  app.py  entity_selector_dialog.py  export_dialog.py  filter_builder_dialog.py  json_viewer_dialog.py  main_window.py  preferences_dialog.py  progress_dialog.py  table_viewer_dialog.py  text_viewer_dialog.py  view_models.py  workers.py
src/bidsio/ui/forms/: __init__.py  about_dialog.ui  advanced_filter_builder_widget.ui  details_panel.ui  entity_selector_dialog.ui  export_dialog.ui  filter_builder_dialog.ui  json_viewer_dialog.ui  main_window.ui  preferences_dialog.ui  progress_dialog.ui  simple_filter_builder_widget.ui  table_viewer_dialog.ui  text_viewer_dialog.ui
src/bidsio/ui/resources/: __init__.py  custom.qss  filtering_help.md  resources.qrc
src/bidsio/ui/ui_files/: main_window.ui
src/bidsio/ui/widgets/: __init__.py  advanced_filter_builder_widget.py  (+3 more)
tests/: __init__.py  conftest.py  test_bids_loader.py  test_core_models.py  test_derivatives.py  test_export.py  test_filters.py  test_integration.py  test_settings.py
